<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="24dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="20dp">

        <TextView
            android:id="@+id/welcomeMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_message"
            android:textColor="@color/text_primary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/loginPrompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/login_prompt"
            android:textColor="@color/text_secondary"
            android:textSize="14sp" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="4dp"
            android:backgroundTint="@color/orange_primary"
            android:text="@string/button_login"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:cornerRadius="8dp" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="24dp"
            android:textStyle="bold"
            android:backgroundTint="@color/orange_primary"
            android:text="@string/button_register"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:cornerRadius="8dp" />


        <Button
            android:id="@+id/googleLoginButton"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:text="@string/google_login_button"
            android:textColor="@color/text_primary"
            android:textSize="14sp"
            android:backgroundTint="@color/white"
            app:cornerRadius="8dp"
            app:icon="@drawable/ic_google"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            app:iconTint="@null"
            app:strokeColor="@color/blue_light"
            app:strokeWidth="2dp"/>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>